--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "geoip-lite": "^1.4.10",
     "mongoose": "^8.9.5",
     "nanoid": "^5.0.9",
-    "useragent": "^2.3.0"
+    "ua-parser-js": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
